--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="action_demodulation_wfm">Demodulation: wide FM</string>
     <string name="action_demodulation_lsb">Demodulation: LSB</string>
     <string name="action_demodulation_usb">Demodulation: USB</string>
+    <string name="action_demodulation_lcw">Demodulation: LCW</string>
+    <string name="action_demodulation_ucw">Demodulation: UCW</string>
     <string name="action_setFrequency">Set Frequency</string>
     <string name="action_setGain">Set Gain</string>
     <string name="action_recordOff">Record</string>
